Changed project name and project link in 3rd tab.

--- a/index.html
+++ b/index.html
@@ -227,13 +227,13 @@
                         <img src="img/port1.jpg" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>Movie Paradise</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/PerdidoenCoding/first_react_app" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
-                            <a href="#" class="icon">
-                                <i class="fab fa-behance"></i>
+                            <a href="https://perdidoencoding.github.io/first_react_app/" class="icon">
+                                <i class="fas fa-link" style="color: white;"></i>
                             </a>
                             <a href="#" class="icon">
                                 <i class="fab fa-youtube"></i>
